--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,8 +1,8 @@
 
 {
-  "name":"PWA Tutorial",
-  "short_name":"PWA",
-  "start_url":"index.html",
+  "name":"Pwa test push",
+  "short_name":"PTP",
+  "start_url":"./index.html",
   "display":"standalone",
   "background_color":"#5900b3",
   "theme_color":"black",
